# FastAPIStack

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  generate_fastapi_project.sh  pyproject.toml
app/: main.py
app/api/v1/: auth.py  courses.py  forms.py  sse.py  uploads.py  users.py  websocket.py
app/api/v2/: advanced_auth.py  advanced_courses.py
app/common/: cache_utils.py  email_utils.py  file_utils.py  validators.py
app/core/: config.py  dependencies.py  logging.py  security.py
app/exceptions/: auth_exceptions.py  base_exceptions.py  validation_exceptions.py
app/middleware/: cors_middleware.py  rate_limiter.py  request_timer.py
app/models/: course.py  token.py  user.py
app/schemas/: auth.py  common.py  course.py  user.py
app/services/: auth_service.py  course_service.py  notification_service.py  user_service.py
app/templates/: api_docs.html  reset_password.html  welcome_email.html
app/tests/: conftest.py  test_auth.py  test_courses.py  test_middleware.py  test_sse.py  test_uploads.py  test_websockets.py
docs/: api_usage_guide.md  architecture_decisions.md  async_best_practices.md  concepts_map.md  deployment_guide.md  learning_path.md  quick_reference.md  testing_guide.md
scripts/: benchmark_apis.py  generate_fake_data.py  generate_openapi_spec.py  run_tests.sh
